--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
               <div class="banner-item image-zoom-effect">
                 <div class="image-holder">
                   <a href="#">
-                    <img src="images/banner-image-1.jpg" alt="product" class="img-fluid">
+                    <img src="images/banner-image-1.jpg" alt="best hair product" class="img-fluid">
                   </a>
                 </div>
                 <div class="banner-content py-4">
@@ -485,7 +485,7 @@
               <div class="banner-item image-zoom-effect">
                 <div class="image-holder">
                   <a href="#">
-                    <img src="images/banner-image-2.jpg" alt="product" class="img-fluid">
+                    <img src="images/banner-image-2.jpg" alt="best retinol product" class="img-fluid">
                   </a>
                 </div>
                 <div class="banner-content py-4">
@@ -503,7 +503,7 @@
               <div class="banner-item image-zoom-effect">
                 <div class="image-holder">
                   <a href="#">
-                    <img src="images/banner-image-3.jpg" alt="product" class="img-fluid">
+                    <img src="images/banner-image-3.jpg" alt="best retinol product" class="img-fluid">
                   </a>
                 </div>
                 <div class="banner-content py-4">
@@ -521,7 +521,7 @@
               <div class="banner-item image-zoom-effect">
                 <div class="image-holder">
                   <a href="#">
-                    <img src="images/banner-image-4.jpg" alt="product" class="img-fluid">
+                    <img src="images/banner-image-4.jpg" alt="concept of product" class="img-fluid">
                   </a>
                 </div>
                 <div class="banner-content py-4">
@@ -539,7 +539,7 @@
               <div class="banner-item image-zoom-effect">
                 <div class="image-holder">
                   <a href="#">
-                    <img src="images/banner-image-5.jpg" alt="product" class="img-fluid">
+                    <img src="images/banner-image-5.jpg" alt="digital product" class="img-fluid">
                   </a>
                 </div>
                 <div class="banner-content py-4">
@@ -631,7 +631,7 @@
             <div class="cat-item image-zoom-effect">
               <div class="image-holder">
                 <a href="index.html">
-                  <img src="images/cat-item2.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/cat-item2.jpg" alt="age categories" class="product-image img-fluid">
                 </a>
               </div>
               <div class="category-content">
@@ -645,7 +645,7 @@
             <div class="cat-item image-zoom-effect">
               <div class="image-holder">
                 <a href="index.html">
-                  <img src="images/cat-item3.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/cat-item3.jpg" alt="art categories" class="product-image img-fluid">
                 </a>
               </div>
               <div class="category-content">
@@ -672,7 +672,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder position-relative">
                 <a href="index.html">
-                  <img src="images/product-item-1.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/product-item-1.jpg" alt="best and worst categories" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
@@ -692,7 +692,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder position-relative">
                 <a href="index.html">
-                  <img src="images/product-item-2.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/product-item-2.jpg" alt="best selling categories on amazon" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
@@ -712,7 +712,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder position-relative">
                 <a href="index.html">
-                  <img src="images/product-item-3.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/product-item-3.jpg" alt="boycott the witness news categories" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
@@ -732,7 +732,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder position-relative">
                 <a href="index.html">
-                  <img src="images/product-item-4.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/product-item-4.jpg" alt="business categories" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
@@ -752,7 +752,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder position-relative">
                 <a href="index.html">
-                  <img src="images/product-item-10.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/product-item-10.jpg" alt="categories and objects in artificial intelligence" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
@@ -817,7 +817,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder">
                 <a href="index.html">
-                  <img src="images/product-item-4.jpg" alt="categories" class="product-image img-fluid">
+                  <img src="images/product-item-4.jpg" alt="categories and taxonomic hierarchy" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
@@ -837,7 +837,7 @@
             <div class="product-item image-zoom-effect link-effect">
               <div class="image-holder">
                 <a href="index.html">
-                  <img src="images/product-item-3.jpg" alt="product" class="product-image img-fluid">
+                  <img src="images/product-item-3.jpg" alt="a production possibilities curve shows" class="product-image img-fluid">
                 </a>
                 <a href="index.html" class="btn-icon btn-wishlist">
                   <svg width="24" height="24" viewBox="0 0 24 24">
